--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 <body>
 	<h1>Welcome to my functional programming repo</h1>
 
-	<script src="../scripts/app.js"></script>
+	<script src="scripts/app.js"></script>
 </body>
 </html>
