feat: add charts html

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,15 @@
 	<title>Functional programming</title>
 </head>
 <body>
-	<h1>Welcome to my functional programming repo</h1>
+	<div class="bar-chart">
+		<h1>Het aantal objecten per eeuw</h1>
+		<p>Ga met je muis over de bars om te zien wat gemiddeld de categorieën zijn met de langste objecten</p>
+	</div>
 
+	<div class="bubble-chart">
+		<h2>De 5 categorieën binnen deze eeuw met gemiddeld de langste objecten</h2>
+		<p>Ga met je muis over de categorieën </p>
+	</div>
 	<script src="scripts/bundle.js"></script>
 </body>
 </html>
