feat(home-page): add title

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 	<title>Functional programming</title>
 </head>
 <body>
+	<h1>De collectie van het NMVW</h1>
 	<div class="bar-chart">
-		<h1>Het aantal objecten per eeuw</h1>
+		<h2>Uit welke eeuw komt de collectie?</h2>
 		<p>Ga met je muis over de bars om te zien wat gemiddeld de categorieën zijn met de langste objecten</p>
 	</div>
 
