feat(home-page): add hints

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 
 	<div class="bubble-chart">
 		<h2>De 5 categorieën binnen deze eeuw met gemiddeld de langste objecten</h2>
-		<p>Ga met je muis over de categorieën </p>
+		<p>Ga met je muis over de categorieën</p>
+		<p>Let op: dit betreft alleen de resultaten die daadwerkelijk een lengte hebben</p>
 	</div>
 	<script src="scripts/bundle.js"></script>
 </body>
